fixing white space

--- a/css/style.scss
+++ b/css/style.scss
@@ -561,3 +561,10 @@ img.img-responsive {
     text-transform:uppercase;
   }
 }
+.content-container {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
